<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">约束布局实验1</string>
    <string name="toolbar_title">ConstraintLayoutTest</string>
    <string name="input_label">Input</string>
    <string name="input_value">0.0</string>

    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_div">&#247;</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_mul">&#215;</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_sub">&#8722;</string>
    <string name="key_dot">.</string>
    <string name="key_0">0</string>
    <string name="key_eq">=</string>
    <string name="key_add">+</string>
</resources>
